--- a/.npmignore
+++ b/.npmignore
@@ -1,22 +1,135 @@
-# npm
-npm-debug.log
+# # npm
+# npm-debug.log
 
-# git
-.git
-.gitattributes
-.gitignore
+# # git
+# .git
+# .gitattributes
+# .gitignore
 
-# vscode
-.vscode
+# # vscode
+# .vscode
 
-# RC files
-.eslintrc.js
-.eslintrc.backend.js
-.eslintrc.frontend.js
-.prettierrc.json
+# # RC files
+# .eslintrc.js
+# .eslintrc.backend.js
+# .eslintrc.frontend.js
+# .prettierrc.json
 
-# config files
-.editorconfig
+# # config files
+# .editorconfig
 
-# github
-.github
+# # github
+# .github
+
+
+
+# ############################
+# # OS X
+# ############################
+
+# .DS_Store
+# .AppleDouble
+# .LSOverride
+# Icon
+# .Spotlight-V100
+# .Trashes
+# ._*
+
+
+# ############################
+# # Linux
+# ############################
+
+# *~
+
+
+# ############################
+# # Windows
+# ############################
+
+# Thumbs.db
+# ehthumbs.db
+# Desktop.ini
+# $RECYCLE.BIN/
+# *.cab
+# *.msi
+# *.msm
+# *.msp
+
+
+# ############################
+# # Packages
+# ############################
+
+# *.7z
+# *.csv
+# *.dat
+# *.dmg
+# *.gz
+# *.iso
+# *.jar
+# *.rar
+# *.tar
+# *.zip
+# *.com
+# *.class
+# *.dll
+# *.exe
+# *.o
+# *.seed
+# *.so
+# *.swo
+# *.swp
+# *.swn
+# *.swm
+# *.out
+# *.pid
+
+
+# ############################
+# # Logs and databases
+# ############################
+
+# *.log
+# *.sql
+# *.sqlite
+
+
+# ############################
+# # Misc.
+# ############################
+
+# *#
+# ssl
+# .idea
+# nbproject
+
+
+# ############################
+# # Node.js
+# ############################
+
+# lib-cov
+# lcov.info
+# pids
+# logs
+# results
+# build
+# node_modules
+# .node_history
+
+
+# ############################
+# # Tests
+# ############################
+
+# test
+# testApp
+# coverage
+
+
+# ############################
+# # Front-end workflow
+# ############################
+
+# bower
