--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main":"server.js",
   "scripts": {
     "develop": "strapi develop",
-    "start": "strapi start",
+    "start": "node server.js",
     "build": "strapi build",
     "strapi": "strapi"
    
