--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
-  "main":"server.js",
+  "main":"index.js",
   "scripts": {
     "develop": "strapi develop",
-    "start": "node server.js",
+    "start": "node index.js",
     "build": "strapi build",
     "strapi": "strapi"
    
