--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
-  "main":"index.js",
+  "main": "index.js",
   "scripts": {
     "develop": "strapi develop",
-    "start": "node  ./build/index.js",
+    "start": " strapi start",
     "build": "strapi build",
     "strapi": "strapi"
-   
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.13.1",
-    "@strapi/plugin-users-permissions": "4.13.1",
-    "@strapi/provider-upload-cloudinary": "^4.13.1",
-    "@strapi/strapi": "4.13.1",
+    "@strapi/plugin-i18n": "4.13.7",
+    "@strapi/plugin-users-permissions": "4.13.7",
+    "@strapi/provider-upload-cloudinary": "^4.13.7",
+    "@strapi/strapi": "4.13.7",
+    "mysql": "^2.18.1",
     "pg": "^8.11.3"
   },
   "author": {
